--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.cdnfonts.com/css/satoshi"); 
+/* @import url("https://fonts.cdnfonts.com/css/satoshi");  */
 
 @tailwind base;
 @tailwind components;
